monitoring/grafana/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  rules:
    - host: "grafana.tristan.moe"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: grafana
                port:
                  number: 80
  tls:
    - hosts:
        - "grafana.tristan.moe"
      secretName: wildcard-tristan-moe
